--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -238,6 +238,16 @@ footer2 {
   text-align: left;
 }
 
+.footer1-btn1-close1-mobile{
+  width: 120px;
+  padding: 10px;
+  text-decoration: none;
+  background-color: #f05b36;
+  color: #000000;
+  border-radius: 3px;
+  text-align: left;
+}
+
 .footer1-btn1-acesso{
   font-size: 12px;
   background-color: #ffffff;
@@ -283,6 +293,15 @@ footer2 {
   text-align:right;
 }
 
+.footer1-btn1-close3-mobile{
+  width: 120px;
+  padding: 10px;
+  text-decoration: none;
+  background-color: #3aec23;
+  color: #413f3f;
+  border-radius: 3px;
+  text-align:right;
+}
 
 .tres {
   padding-top: 2%;
